--- a/app/src/main/res/menu/menu_bookmarks.xml
+++ b/app/src/main/res/menu/menu_bookmarks.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_favourite"
-        android:icon="@android:drawable/ic_menu_more"
         android:orderInCategory="100"
         android:title="@string/favourites"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
+
+ <!--   android:icon="@android:drawable/ic_menu_more"-->
